--- a/huddle/src/styles.scss
+++ b/huddle/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 * {
     margin: 0;
     padding: 0;
@@ -16,6 +17,7 @@ body {
     height: 100dvh;
     position: relative;
     overflow-x: hidden;
+    font-family: 'Poppins', serif;
 }
 
 img {
