--- a/huddle/src/app/header/header.component.css
+++ b/huddle/src/app/header/header.component.css
@@ -7,7 +7,7 @@ header nav {
   justify-content: space-between;
   max-width: 1240px;
   margin: auto;
-  padding-top: 2dvh;
+  padding-top: 5dvh;
 }
 header nav .nav-btn {
   display: flex;
@@ -29,11 +29,12 @@ header .header-container div {
   flex: 1;
 }
 header .header-container .header-text {
-  margin-top: 14dvh;
+  margin-top: 16dvh;
 }
 header .header-container .header-text h1 {
   color: hsl(192, 100%, 9%);
   margin-bottom: 5dvh;
+  font-size: 2.2rem;
 }
 header .header-container .header-text p {
   color: hsl(192, 100%, 9%);
