--- a/huddle/src/app/header/header.component.scss
+++ b/huddle/src/app/header/header.component.scss
@@ -8,7 +8,7 @@ header {
         justify-content: space-between;
         max-width: 1240px;
         margin: auto;
-        padding-top: 2dvh;
+        padding-top: 5dvh;
 
         .nav-btn {
             display: flex;
@@ -34,11 +34,12 @@ header {
         }
 
         .header-text {
-            margin-top: 14dvh;
+            margin-top: 16dvh;
 
             h1 {
                 color: $veryDarkCyan;
                 margin-bottom: 5dvh;
+                font-size: 2.2rem;
             }
 
             p {
@@ -65,4 +66,4 @@ header {
             margin-top: 7dvh;
         }
     }
-}
+} 
