--- a/huddle/src/app/main/main.component.html
+++ b/huddle/src/app/main/main.component.html
@@ -26,4 +26,8 @@
             <img src="/illustration-grow-together.svg" alt="">
         </div>
     </div>
+    <div class="community">
+        <h3>Ready To Build Your Community?</h3>
+        <button class="get-btn">Get Started For Free</button>
+    </div>
 </main>
