--- a/huddle/src/app/main/main.component.scss
+++ b/huddle/src/app/main/main.component.scss
@@ -5,12 +5,16 @@ main {
     flex-direction: column;
     gap: 3dvh;
     margin-top: 5dvh;
+    margin-bottom: 50dvh;
+    position: relative;
 
-div {
+    div {
         flex: 1;
     }
 
-    .grow-container, .flow-container, .users-container {
+    .grow-container,
+    .flow-container,
+    .users-container {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -20,25 +24,66 @@ div {
         border-radius: 1dvh;
     }
 
-    .grow-text, .flow-text, .users-text {
+    .grow-text,
+    .flow-text,
+    .users-text {
         text-align: center;
 
         h2 {
             font-size: 1.8rem;
             margin-bottom: 3dvh;
         }
-       
+
         p {
             color: $grayishBlue;
         }
     }
 
-    .grow-img, .flow-img, .users-img {
+    .grow-img,
+    .flow-img,
+    .users-img {
 
         img {
             max-width: 100%;
             height: auto;
             margin: 0 auto;
+        }
+    }
+
+    .community {
+        position: absolute;
+        bottom: -60dvh;
+        left: 60dvh;
+        z-index: 9999;
+        background-color: white; 
+        box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
+        border-radius: 2dvh;
+        width: 90dvh;
+        height: 35dvh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+
+        h3 {
+            font-size: 1.5rem;
+            color: $veryDarkCyan;
+            margin-bottom: 4dvh;
+        }
+
+        .get-btn {
+            height: 6dvh;
+            width: 30dvh;
+            margin: 0 auto;
+            border: none;
+            border-radius: 3dvh;
+            background-color: $pink;
+            color: #fff;
+            transition: opacity .7s;
+        }
+
+        .get-btn:hover {
+            opacity: 50%;
         }
     }
 }
