--- a/huddle/src/app/footer/footer.component.scss
+++ b/huddle/src/app/footer/footer.component.scss
@@ -60,3 +60,29 @@ footer {
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding-top: 5dvh !important;
+    }
+
+    .about-container, .carrer-container {
+        display: flex;
+        justify-content: center;
+
+        .nav-list {
+            text-align: center;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer-icons {
+        display: flex;
+        justify-content: center;
+    }
+}
